Fixed flexbox on small screens for boxes on certifications page

--- a/css/style.css
+++ b/css/style.css
@@ -904,3 +904,9 @@ height: 100% !important;
   align-self: center;
   padding: 20px;
 }
+
+@media only screen and (max-width: 992px) {
+  .cert-flex-group {
+    flex: 0 1 50%;
+}
+}
